DOCS - Configuration docker-compose.yml and docker-compose.override.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,39 @@
-version: '3'
+version: "3.7"
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
+  ###> doctrine/doctrine-bundle ###
+  db:
+    image: mysql
+    container_name: db
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
+      MYSQL_ROOT_PASSWORD: 123
+      MYSQL_DATABASE: app
+    ports:
+      - "3306:3306"
     volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - db-data:/var/lib/mysql
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: pma
+    links:
+      - db
+    environment:
+      PMA_HOST: db
+      PMA_PORT: 3306
+      PMA_ARBITRARY: 1
+    ports:
+      - "4000:80"
+  php7-2:
+    image: php:7.2-apache
+    container_name: php-container
+    restart: always
+    volumes:
+      - ./:/var/www/html
+    ports:
+      - "8080:80"
 volumes:
-###> doctrine/doctrine-bundle ###
+  ###> doctrine/doctrine-bundle ###
   db-data:
+  html:
 ###< doctrine/doctrine-bundle ###
