--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,4 +1,4 @@
-# This file is the entry point to configure your own services.
+# This file is the entry point to configure your own service.
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
@@ -6,12 +6,12 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
+    # default configuration for service in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true      # Automatically injects dependencies in your service.
+        autoconfigure: true # Automatically registers your service as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
+    # makes classes in src/ available to be used as service
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
